# codemeticulous

./: CITATION.cff  README.md  codemeta.json  pyproject.toml
.github/: test.yml
.github/workflows/: test.yml
codemeticulous/: __init__.py  ai_convert.py  cli.py  convert.py  extract.py  mixins.py  models.py  prompt_strategies.py  standards.py  summarize_schema.py
codemeticulous/cff/: __init__.py  convert.py  models.py
codemeticulous/codemeta/: __init__.py  convert.py  extract.py  models.py  types.py
codemeticulous/common/: mixins.py  utils.py
codemeticulous/datacite/: convert.py  models.py
schema/datacite/: schema45.json  schema46.json
scripts/: modelgen
tests/: conftest.py  test_clean.py  test_convertible.py  test_invalid.py  test_valid.py
tests/data/cff/valid/: key-complete.cff  poc.cff  software-without-a-doi-closed-source.cff  xenon-middleware_xenon-adaptors-cloud.cff
tests/data/codemeta/clean/: contIntegration.expected.json  contIntegration.json  context.expected.json  context.json  creator.expected.json  creator.json  embargoDate.expected.json  embargoDate.json  programmingLanguageList.expected.json
tests/data/codemeta/invalid/: noname.json
tests/data/codemeta/valid/: codemetar.json  minimal.json
tests/data/datacite/valid/: full.json
